# mandelbrot-wasm

./: Cargo.toml  README.md  index.html  mandelbrot.css  mandelbrot.js  palette.py  palette.txt
src/: lib.rs
