[package]
name = "mandelbrot-wasm"
version = "0.1.0"
authors = ["Christian Kuhl <christian.kuhl84@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
num = "0.3.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
# web-sys = "0.3.45"

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies.web-sys]
version = "0.3.45"
features = [ "console" ]

[profile.release]
opt-level = "s"
lto = true